# template_mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-poetry.yml  docker-image.yml  pr-lint.yml  release.yml
mlruns/0/: meta.yaml
mlruns/0/3c4130151bff48d580a8b258d5b9ead3/: meta.yaml
mlruns/0/3c4130151bff48d580a8b258d5b9ead3/artifacts/: tmp4pehykuz.joblib
mlruns/0/3c4130151bff48d580a8b258d5b9ead3/tags/: mlflow.source.name
serving/: app.py  run.sh
src/mlops_template/: __init__.py  cli.py  data.py  feature_engineer.py  features.py  mlflow_utils.py  models.py  pipeline.py  pipeline_manager.py  protocols.py  schemas.py  seed.py  settings.py  utils.py
tests/: conftest.py  test_data.py  test_edge_cases.py  test_features.py  test_pipeline.py  test_property_based.py
