
[tool.poetry]
name = "mlops-template"
version = "0.1.0"
description = "Opinionated MLOps project template"
authors = ["dfbustosus <david@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.3"
mlflow = "^2.5"
joblib = "^1.3"
pandera = "^0.20"
pydantic = "^1.10"
category_encoders = "^2.5"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
mypy = "^1.9"
flake8 = "^6.0"
black = "^24.3"
pytest-cov = "^4.1"
pre-commit = "^3.4"
hypothesis = "^6.80"
fastapi = "^0.100"
uvicorn = "^0.38"

[tool.poetry.scripts]
mlops-template = "mlops_template.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
